# arxiv-prism

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: cli-conventions.mdc  converter-patterns.mdc  design-standards.mdc  python-standards.mdc  readme-standards.mdc
design/: architecture.md  cli.md  data_models.md  formatters.md  parsers.md
html/: s41587-026-03005-7.html  s41598-025-26916-y.html  s41598-025-31173-0.html  s41598-026-37840-0.html
output/: PMC11879214.json  PMC11879214.md  PMC12057662.json  PMC12057662.md  PMC12133276.json  PMC12133276.md  PMC12266126.json  PMC12266126.md  PMC12311287.json  PMC12311287.md  PMC12407086.json  PMC12407086.md  PMC12487881.json  PMC12487881.md  PMC12790823.json  PMC12790823.md  s41587-026-03005-7.json  s41587-026-03005-7.md  s41598-025-26916-y.json  s41598-025-26916-y.md  s41598-025-31173-0.json  s41598-025-31173-0.md  s41598-026-37840-0.json  s41598-026-37840-0.md
src/arxiv_prism/: __init__.py  cli.py  text_utils.py
src/arxiv_prism/formatters/: __init__.py  base.py  json_formatter.py  markdown_formatter.py
src/arxiv_prism/parsers/: __init__.py  base.py  html_parser.py  xml_parser.py
src/converter/: __main__.py  cli.py  math_utils.py  models.py  text_utils.py
src/converter/formatters/: __init__.py  base.py  json_formatter.py  markdown_formatter.py
src/converter/parsers/: __init__.py  base.py  html_parser.py  xml_parser.py
xml/: PMC11879214.xml  PMC12057662.xml  PMC12133276.xml  PMC12266126.xml  PMC12311287.xml  PMC12407086.xml  PMC12487881.xml  PMC12790823.xml
