[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "converter"
version = "0.1.0"
description = "Convert articles from HTML/XML to JSON/Markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
converter = "converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
